src/audio/codec/flac/bindings.rs

unsafe extern "C" {
    pub fn drflac_open_and_read_pcm_frames_s32(
        onRead: drflac_read_proc,
        onSeek: drflac_seek_proc,
        onTell: drflac_tell_proc,
        pUserData: *mut cty::c_void,
        channels: *mut cty::c_uint,
        sampleRate: *mut cty::c_uint,
        totalPCMFrameCount: *mut drflac_uint64,
        pAllocationCallbacks: *const drflac_allocation_callbacks,
    ) -> *mut drflac_int32;
}
unsafe extern "C" {
    pub fn drflac_open_and_read_pcm_frames_s16(
        onRead: drflac_read_proc,
        onSeek: drflac_seek_proc,
        onTell: drflac_tell_proc,
        pUserData: *mut cty::c_void,
        channels: *mut cty::c_uint,
        sampleRate: *mut cty::c_uint,
        totalPCMFrameCount: *mut drflac_uint64,
        pAllocationCallbacks: *const drflac_allocation_callbacks,
    ) -> *mut drflac_int16;
}
unsafe extern "C" {
    pub fn drflac_open_and_read_pcm_frames_f32(
        onRead: drflac_read_proc,
        onSeek: drflac_seek_proc,
        onTell: drflac_tell_proc,
        pUserData: *mut cty::c_void,
        channels: *mut cty::c_uint,
        sampleRate: *mut cty::c_uint,
        totalPCMFrameCount: *mut drflac_uint64,
        pAllocationCallbacks: *const drflac_allocation_callbacks,
    ) -> *mut f32;
}
unsafe extern "C" {
    pub fn drflac_open_file_and_read_pcm_frames_s32(
        filename: *const cty::c_char,
        channels: *mut cty::c_uint,
        sampleRate: *mut cty::c_uint,
        totalPCMFrameCount: *mut drflac_uint64,
        pAllocationCallbacks: *const drflac_allocation_callbacks,
    ) -> *mut drflac_int32;
}
unsafe extern "C" {
    pub fn drflac_open_file_and_read_pcm_frames_s16(
        filename: *const cty::c_char,
        channels: *mut cty::c_uint,
        sampleRate: *mut cty::c_uint,
        totalPCMFrameCount: *mut drflac_uint64,
        pAllocationCallbacks: *const drflac_allocation_callbacks,
    ) -> *mut drflac_int16;
}
unsafe extern "C" {
    pub fn drflac_open_file_and_read_pcm_frames_f32(
        filename: *const cty::c_char,
        channels: *mut cty::c_uint,
        sampleRate: *mut cty::c_uint,
        totalPCMFrameCount: *mut drflac_uint64,
        pAllocationCallbacks: *const drflac_allocation_callbacks,
    ) -> *mut f32;
}
unsafe extern "C" {
    pub fn drflac_open_memory_and_read_pcm_frames_s32(
        data: *const cty::c_void,
        dataSize: usize,
        channels: *mut cty::c_uint,
        sampleRate: *mut cty::c_uint,
        totalPCMFrameCount: *mut drflac_uint64,
        pAllocationCallbacks: *const drflac_allocation_callbacks,
    ) -> *mut drflac_int32;
}
unsafe extern "C" {
    pub fn drflac_open_memory_and_read_pcm_frames_s16(
        data: *const cty::c_void,
        dataSize: usize,
        channels: *mut cty::c_uint,
        sampleRate: *mut cty::c_uint,
        totalPCMFrameCount: *mut drflac_uint64,
        pAllocationCallbacks: *const drflac_allocation_callbacks,
    ) -> *mut drflac_int16;
}
unsafe extern "C" {
    pub fn drflac_open_memory_and_read_pcm_frames_f32(
        data: *const cty::c_void,
        dataSize: usize,
        channels: *mut cty::c_uint,
        sampleRate: *mut cty::c_uint,
        totalPCMFrameCount: *mut drflac_uint64,
        pAllocationCallbacks: *const drflac_allocation_callbacks,
    ) -> *mut f32;
}
unsafe extern "C" {
    pub fn drflac_free(
        p: *mut cty::c_void,
        pAllocationCallbacks: *const drflac_allocation_callbacks,
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct drflac_vorbis_comment_iterator {
    pub countRemaining: drflac_uint32,
    pub pRunningData: *const cty::c_char,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of drflac_vorbis_comment_iterator"]
        [::core::mem::size_of::<drflac_vorbis_comment_iterator>() - 8usize];
    ["Alignment of drflac_vorbis_comment_iterator"]
        [::core::mem::align_of::<drflac_vorbis_comment_iterator>() - 4usize];
    ["Offset of field: drflac_vorbis_comment_iterator::countRemaining"]
        [::core::mem::offset_of!(drflac_vorbis_comment_iterator, countRemaining) - 0usize];
    ["Offset of field: drflac_vorbis_comment_iterator::pRunningData"]
        [::core::mem::offset_of!(drflac_vorbis_comment_iterator, pRunningData) - 4usize];
};
unsafe extern "C" {
    pub fn drflac_init_vorbis_comment_iterator(
        pIter: *mut drflac_vorbis_comment_iterator,
        commentCount: drflac_uint32,
        pComments: *const cty::c_void,
    );
}
unsafe extern "C" {
    pub fn drflac_next_vorbis_comment(
        pIter: *mut drflac_vorbis_comment_iterator,
        pCommentLengthOut: *mut drflac_uint32,
    ) -> *const cty::c_char;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct drflac_cuesheet_track_iterator {
    pub countRemaining: drflac_uint32,
    pub pRunningData: *const cty::c_char,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of drflac_cuesheet_track_iterator"]
        [::core::mem::size_of::<drflac_cuesheet_track_iterator>() - 8usize];
    ["Alignment of drflac_cuesheet_track_iterator"]
        [::core::mem::align_of::<drflac_cuesheet_track_iterator>() - 4usize];
    ["Offset of field: drflac_cuesheet_track_iterator::countRemaining"]
        [::core::mem::offset_of!(drflac_cuesheet_track_iterator, countRemaining) - 0usize];
    ["Offset of field: drflac_cuesheet_track_iterator::pRunningData"]
        [::core::mem::offset_of!(drflac_cuesheet_track_iterator, pRunningData) - 4usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct drflac_cuesheet_track_index {
    pub offset: drflac_uint64,
    pub index: drflac_uint8,
    pub reserved: [drflac_uint8; 3usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of drflac_cuesheet_track_index"]
        [::core::mem::size_of::<drflac_cuesheet_track_index>() - 16usize];
    ["Alignment of drflac_cuesheet_track_index"]
        [::core::mem::align_of::<drflac_cuesheet_track_index>() - 8usize];
    ["Offset of field: drflac_cuesheet_track_index::offset"]
        [::core::mem::offset_of!(drflac_cuesheet_track_index, offset) - 0usize];
    ["Offset of field: drflac_cuesheet_track_index::index"]
        [::core::mem::offset_of!(drflac_cuesheet_track_index, index) - 8usize];
    ["Offset of field: drflac_cuesheet_track_index::reserved"]
        [::core::mem::offset_of!(drflac_cuesheet_track_index, reserved) - 9usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct drflac_cuesheet_track {
    pub offset: drflac_uint64,
    pub trackNumber: drflac_uint8,
    pub ISRC: [cty::c_char; 12usize],
    pub isAudio: drflac_bool8,
    pub preEmphasis: drflac_bool8,
    pub indexCount: drflac_uint8,
    pub pIndexPoints: *const drflac_cuesheet_track_index,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of drflac_cuesheet_track"][::core::mem::size_of::<drflac_cuesheet_track>() - 32usize];
    ["Alignment of drflac_cuesheet_track"]
        [::core::mem::align_of::<drflac_cuesheet_track>() - 8usize];
    ["Offset of field: drflac_cuesheet_track::offset"]
        [::core::mem::offset_of!(drflac_cuesheet_track, offset) - 0usize];
    ["Offset of field: drflac_cuesheet_track::trackNumber"]
        [::core::mem::offset_of!(drflac_cuesheet_track, trackNumber) - 8usize];
    ["Offset of field: drflac_cuesheet_track::ISRC"]
        [::core::mem::offset_of!(drflac_cuesheet_track, ISRC) - 9usize];
    ["Offset of field: drflac_cuesheet_track::isAudio"]
        [::core::mem::offset_of!(drflac_cuesheet_track, isAudio) - 21usize];
    ["Offset of field: drflac_cuesheet_track::preEmphasis"]
        [::core::mem::offset_of!(drflac_cuesheet_track, preEmphasis) - 22usize];
    ["Offset of field: drflac_cuesheet_track::indexCount"]
        [::core::mem::offset_of!(drflac_cuesheet_track, indexCount) - 23usize];
    ["Offset of field: drflac_cuesheet_track::pIndexPoints"]
        [::core::mem::offset_of!(drflac_cuesheet_track, pIndexPoints) - 24usize];
};
unsafe extern "C" {
    pub fn drflac_init_cuesheet_track_iterator(
        pIter: *mut drflac_cuesheet_track_iterator,
        trackCount: drflac_uint32,
        pTrackData: *const cty::c_void,
    );
}
unsafe extern "C" {
    pub fn drflac_next_cuesheet_track(
        pIter: *mut drflac_cuesheet_track_iterator,
        pCuesheetTrack: *mut drflac_cuesheet_track,
    ) -> drflac_bool32;
}
